# aprof

./: CMakeLists.txt  README.md  amiga.cmake
src/: dsp.c  freedosobject.c  p3amigaguide.c  p3break.c  p3exec.c  p3funcs.c  p3gui.c  p3load.c  p3main.c  p3prefs.c  p3rexx.c  p3search.c  p3symdis.c  p3timer.c
utils/: seg.cpp
